<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/NewsItemCardView"
    android:layout_width="match_parent"
    android:layout_height="126dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="3dp"
    android:background="@color/cardview_shadow_start_color">

    <LinearLayout
        android:id="@+id/leftSection"
        android:layout_width="170dp"
        android:layout_height="126dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/news_item"
            android:layout_width="160dp"
            android:layout_height="126dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_news_item_image"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_gravity="top|start"
                android:contentDescription="@string/news_item_image"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newsSection"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_news_item_title"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/color_logo"
            tools:targetApi="jelly_bean"
            tools:text="@string/news_item" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/favSection"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_fav_news_icon_inactive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/remove_favorite"
            android:src="@drawable/lovedisabled" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/favSection_active"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_fav_news_icon_active"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/loveenabled" />

    </LinearLayout>





</FrameLayout>